# pyicloud

./: .gitignore  .pre-commit-config.yaml  README.md  buf.yaml  example_reminders.py  example_reminders_delta.py  examples.py  explore_notes.py  pyicloud_refactoring_plan.md  pyproject.toml  repo_sync_report.md  requirements.txt  requirements_all.txt  requirements_security_key.txt  requirements_test.txt
.devcontainer/: Dockerfile  auto-activate-venv.sh  devcontainer.json  setup-zsh.sh
.github/workflows/: linting.yml  publish.yml  regenerate-uv-lock.yml  sonarcube.yml  tests.yml
docs/: _config.yml  index.markdown
docs/_includes/: code_method.html
docs/_includes/code/: auth_get_api_instance.md  auth_handle_2fa.md  cmdline_authenticate.md  cmdline_handle_2fa.md
docs/_posts/: 2025-04-12-welcome-to-jekyll.markdown
docs/comparisons/: authentication_comparison.md
docs/planning/: boto3_refactor_plan.md  issues_identified_in_original_sprint_1_refactor_plan.md  pydantic_models_analysis.md  sprint_1_policy_executor_extraction.md  sprint_1_refactor_plan.md
docs/research/: boto3_usage_examples.py
examples/: notes.py  notes_cli.py
pyicloud/: _optional_deps.py  base.py  hsa2_bridge.py  hsa2_bridge_prover.py
pyicloud/cli/: __init__.py  main.py
pyicloud/cli/commands/: __init__.py  auth.py  hidemyemail.py
pyicloud/cli/commands/auth/: __init__.py  login.py  logout.py  status.py
pyicloud/cli/commands/hidemyemail/: __init__.py  delete.py  details.py  generate.py  list_aliases.py  reserve.py  update.py
pyicloud/cli/reference_examples/: auth.py  hidemyemail.py
pyicloud/cli/utils/: __init__.py  auth.py
pyicloud/common/cloudkit/: __init__.py  models.py
pyicloud/models/services/calendar/: missing_operations.md
pyicloud/services/notes/: client.py  domain.py  service.py
pyicloud/services/notes/models/: dto.py
pyicloud/services/notes/protobuf/: notes.proto  notes_pb2.py
pyicloud/services/notes/rendering/: attachments.py  ck_datasource.py  exporter.py  options.py  renderer.py  renderer_iface.py  table_builder.py
pyicloud/services/reminders/: __init__.py  _protocol.py  _reads.py  _writes.py  client.py  service.py
pyicloud/services/reminders/models/: __init__.py  cloudkit.py  domain.py  models.py
pyicloud/services/reminders/protobuf/: reminders.proto  reminders_pb2.py  typedef.json
scripts/: generate_devices_file.py  poc_iter_changes_mislabel.py  query_appledb.py  validate_and_codegen.py
tests/: test_base.py  test_notes.py  test_notes_cli.py  test_notes_integration.py  test_notes_rendering.py  test_optional_deps.py
tests/fixtures/: note_fixture.json
tests/services/: test_reminders_cloudkit.py
