[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".tox", "build", "lib"]
addopts = ["--disable-socket", "--allow-unix-socket"]

[tool.isort]
profile = "black"

[tool.tox]
requires = ["tox>=4.24.1", "tox-uv>=0.5.0", "tox-gh-actions>=3.3.0"]
env_list = ["lint", "3.13", "3.12", "3.11", "3.10", "3.9"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["pytest"]]
dependency_groups = ["dev"]      # install the dev group managed by uv
runner = "uv-venv-lock-runner"   # use uv sync --locked behind the scenes

[tool.tox.gh-actions]
python = '''
    3.9: 3.9, lint
    3.10: 3.10
    3.11: 3.11
    3.12: 3.12
    3.13: 3.13
'''

[tool.setuptools_scm]

[build-system]
requires = ["setuptools >= 77.0,< 79.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyicloud"
dynamic = ["version", "readme"]
description = "PyiCloud is a module which allows pythonistas to interact with iCloud webservices."
requires-python = ">=3.9"
license-files = ["LICENSE.txt"]
authors = [
    {name = "The PyiCloud Authors"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries"
]
keywords = ["icloud", "find-my-iphone"]
dependencies = [
    "certifi>=2024.12.14",
    "click>=8.1.8",
    "keyring>=25.6.0",
    "keyrings-alt>=5.0.2",
    "requests>=2.31.0",
    "srp>=1.0.21",
    "tzlocal==5.3.1",
]


[project.urls]
homepage = "https://github.com/timlaing/pyicloud"
download = "https://github.com/timlaing/pyicloud/releases/latest"
bug_tracker = "https://github.com/timlaing/pyicloud/issues"
repository = "https://github.com/timlaing/pyicloud"

[project.scripts]
icloud = "pyicloud.cmdline:main"

[dependency-groups]
dev = [
    "isort>=5.11.5",
    "pre-commit>=2.21.0",
    "pylint>=3.3.4",
    "pylint-strict-informational>=0.1",
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "pytest-socket>=0.6.0",
    "ruff>=0.9.9",
    "tox-uv>=1.25.0",
    "tox-gh-actions>=3.3.0",
    "build>=1.2.1"
]

[tool.setuptools]
packages = ["pyicloud", "pyicloud.services"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}
